--- a/src/components/stylesheets/Footer.css
+++ b/src/components/stylesheets/Footer.css
@@ -9,10 +9,11 @@
 .footer-section-container {
   display: flex;
   justify-content: space-around;
+  flex-wrap: wrap;
   gap: 3em;
   
   background-color: #191A19;
-  padding: 2em;
+  padding: 1em;
 }
 
 .footer-section-location-social {
@@ -24,7 +25,8 @@
 
 /*  start FooterSection component */
 .footer-section {
-  width: 30em;
+  max-width: 30em;
+  padding: 1em;
 }
 /*  end FooterSection component */
 
@@ -41,8 +43,14 @@
 /* end InformationReference component */
 
 .footer-third-section {
+  max-width: 30em;
   display: flex;
   flex-direction: column;
+  padding: 1em;
+}
+
+.social-media-section-container {
+  padding-top: 2em;
 }
 
 .icons-social-media {
@@ -50,4 +58,9 @@
   justify-content: flex-start;
   gap: 1em;
   padding-top: 1em;
+}
+
+.copyright-section-container {
+  background: #000;
+  padding: 1em 1em 1em 3em;
 }
