--- a/src/components/stylesheets/Footer.css
+++ b/src/components/stylesheets/Footer.css
@@ -34,7 +34,7 @@
 .information-reference-container {
   display: flex; 
   align-items: center;
-  padding: 0.4em;
+  padding-bottom: 0.4em;
 }
 
 .information-reference-container > div {
