--- a/src/pages/stylesheets/HomePage.css
+++ b/src/pages/stylesheets/HomePage.css
@@ -11,10 +11,46 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  box-shadow: -4px 9px 20px -3px rgba(89,76,89,1);
-  background-color: #D8E9A8;
-  padding: 1.2em;
-  margin: 2em;
+  
+  padding: 1em;
+  width: 100%;
+}
+
+.product-container {
   width: 25em;
-  border-radius: 0 0 15px 15px;
+  background-color: #D8E9A8;
+  margin: 2em;
+  box-shadow: -4px 9px 20px -3px rgba(89,76,89,1);
+  border-radius: 15px 15px 15px 15px;
+  border: #D8E9A8 solid 0.5em;
+}
+
+.product-container:hover {
+  transition: 0.5s;
+  width: 25.5em;
+  box-shadow: -4px 10px 10px 5px rgba(90,90,90,1);
+  cursor: pointer;
+}
+
+.image-container {
+  display: flex;
+  justify-content: center;
+  align-content: center;
+}
+
+.image-plant {
+  width: 100%;
+  border-radius: 15px 15px 0 0;
+}
+
+.status-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.status-word {
+  padding-top: 1em;
+  font-size: 0.7em;
 }
