--- a/src/components/stylesheets/Footer.css
+++ b/src/components/stylesheets/Footer.css
@@ -1,4 +1,5 @@
-.footer-container {
+/* ------------------------------------ */
+footer {
   width: 100%;
 
   display: flex;
@@ -6,7 +7,7 @@
   color: white;
 }
 
-.footer-section-container {
+footer > div {
   display: flex;
   justify-content: space-around;
   flex-wrap: wrap;
@@ -15,20 +16,21 @@
   background-color: #191A19;
   padding: 1em;
 }
+/* ------------------------------------ */
 
-.footer-section-location-social {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  height: 100%;
-}
-
-/*  start FooterSection component */
+/* start FooterSection component */
 .footer-section {
   max-width: 30em;
   padding: 1em;
 }
-/*  end FooterSection component */
+/* end FooterSection component */
+
+/* start CopyrightSection component */
+.copyright-section-container {
+  background: #000;
+  padding: 1em 1em 1em 3em;
+}
+/* end CopyrightSection component */
 
 /* start InformationReference component */
 .information-reference-container {
@@ -42,6 +44,16 @@
 }
 /* end InformationReference component */
 
+/* start SocialMediaSection component */
+.icons-social-media {
+  display: flex;
+  justify-content: flex-start;
+  gap: 1em;
+  padding-top: 1em;
+}
+/* end SocialMediaSection component */
+
+/* start FooterSectionReference component */
 .footer-third-section {
   max-width: 30em;
   display: flex;
@@ -49,18 +61,10 @@
   padding: 1em;
 }
 
-.social-media-section-container {
-  padding-top: 2em;
-}
-
-.icons-social-media {
+.footer-section-location-social {
   display: flex;
-  justify-content: flex-start;
-  gap: 1em;
-  padding-top: 1em;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100%;
 }
-
-.copyright-section-container {
-  background: #000;
-  padding: 1em 1em 1em 3em;
-}
+/* end FooterSectionReference component */
