--- a/src/pages/content/stylesheets/HomePageContent.css
+++ b/src/pages/content/stylesheets/HomePageContent.css
@@ -1,9 +1,9 @@
-section {
+.home-page-content {
   background-color: #90B77D;
 
   display: flex;
+  flex-direction: row;
   flex-wrap: wrap;
   justify-content: space-evenly;
-  align-items: center;
-  
+  align-items: center;  
 }
