--- a/src/components/stylesheets/Product.css
+++ b/src/components/stylesheets/Product.css
@@ -1,6 +1,6 @@
 /* start product component */
 .product-container {
-  width: 25em;
+  width: 25em;  
   background-color: #D8E9A8;
   margin: 2em;
   box-shadow: -4px 9px 20px -3px rgba(89,76,89,1);
@@ -46,6 +46,7 @@
 
 .identification-container p {
   font-size: 1.15em;
+  white-space: nowrap;
 }
 /* end ProductIdentification component */
 
@@ -60,5 +61,6 @@
 .status-word {
   padding-top: 1em;
   font-size: 0.7em;
+  white-space: nowrap;
 }
 /* end ProductStatus component */
