connecting front-end with back-end

--- a/src/components/stylesheets/Navbar.css
+++ b/src/components/stylesheets/Navbar.css
@@ -16,9 +16,12 @@
 
   text-decoration: none solid #fff auto;
   color: white;
-  border-bottom: solid #fff 0.1em;
+  
 }
 
+.navbar-element.active {
+  border-bottom: solid #fff 0.1em;
+}
 
 .navbar-element:hover {
   cursor: pointer;
