--- a/src/pages/content/stylesheets/HomePageContent.css
+++ b/src/pages/content/stylesheets/HomePageContent.css
@@ -1,9 +1,25 @@
-.home-page-content {
+.content-container {
   background-color: #90B77D;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
 
+.home-page-content {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: space-evenly;
   align-items: center;  
+}
+
+.button-pagination-container {
+  padding: 2em;
+  display: flex;
+  gap: 3em;
+}
+
+.button-pagination-container > button {
+  padding: 1em;
 }
