--- a/src/pages/content/stylesheets/NewsPage.css
+++ b/src/pages/content/stylesheets/NewsPage.css
@@ -13,18 +13,31 @@ article {
   gap: 2em;
 
   width: 40vw;
-  background-color: antiquewhite;
+  background-color: #D2D79F;
   padding: 1em;
 }
 
+article > div {
+  width: 100%;
+}
+
 article > div > h1 {
-  font-size: 3em;
+  font-size: 2em;
+  border-bottom: 0.1em solid #483838;
 }
 
 article > div > p {
-  font-size: 1.5em;
+  padding: 1em 0 1em 0;
+  font-size: 1.2em;
 }
 
 .news-image {
-  width: 40%;
+  width: 35%; 
+}
+
+button {
+  padding: 0.4em 1em 0.4em 1em;
+  background-color: #42855B;
+  color: #fff;
+  border: 0.1em solid #000;
 }
