--- a/src/components/stylesheets/Footer.css
+++ b/src/components/stylesheets/Footer.css
@@ -4,7 +4,7 @@ footer {
 
   display: flex;
   flex-direction: column;
-  color: white;
+  color: var(--color-white);
 }
 
 footer > div {
@@ -13,7 +13,7 @@ footer > div {
   flex-wrap: wrap;
   gap: 3em;
   
-  background-color: #191A19;
+  background-color: var(--color-black);
   padding: 1em;
 }
 /* ------------------------------------ */
