--- a/src/components/stylesheets/Product.css
+++ b/src/components/stylesheets/Product.css
@@ -1,11 +1,11 @@
 /* start product component */
 .product-container {
   width: 25em;  
-  background-color: #D8E9A8;
+  background-color: var(--color-high);
   margin: 2em;
   box-shadow: -4px 9px 20px -3px rgba(89,76,89,1);
   border-radius: 15px 15px 15px 15px;
-  border: #D8E9A8 solid 0.5em;
+  border: var(--color-high) solid 0.5em;
 }
 
 .product-container:hover {
