--- a/src/pages/content/stylesheets/HomePageContent.css
+++ b/src/pages/content/stylesheets/HomePageContent.css
@@ -1,5 +1,5 @@
 .content-container {
-  background-color: #90B77D;
+  background-color: var(--color-medium-palette-2);
   display: flex;
   flex-direction: column;
   align-items: center;
