--- a/src/pages/content/stylesheets/NewsPage.css
+++ b/src/pages/content/stylesheets/NewsPage.css
@@ -1,5 +1,5 @@
 .news-container {
-  background-color: #90B77D;
+  background-color: var(--color-medium-palette-2);
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -13,7 +13,7 @@ article {
   gap: 2em;
 
   width: 40vw;
-  background-color: #D2D79F;
+  background-color: var(--color-high);
   padding: 1em;
 }
 
@@ -32,12 +32,13 @@ article > div > p {
 }
 
 .news-image {
-  width: 35%; 
+  width: 15em;
+  height: 15em; 
 }
 
 button {
   padding: 0.4em 1em 0.4em 1em;
   background-color: #42855B;
-  color: #fff;
+  color: var(--color-white);
   border: 0.1em solid #000;
 }
