fix footer and add styles

--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,7 @@
   --color-level-four: #3A5A40;
   --color-level-five: #344E41;
   --color-level-six: #132A13;
+  --color-level-seven: #111D13
 }
 
 body {
