--- a/src/pages/single_product/components/stylesheets/SwiperPicture.css
+++ b/src/pages/single_product/components/stylesheets/SwiperPicture.css
@@ -7,7 +7,7 @@
 }
 
 .swiper-slice-container {
-  background-color: var(--color-level-two);
+  background-color: var(--color-level-one);
   padding: 0 1.5em 0 1.5em; 
   border: 3px solid black;
 }
@@ -15,7 +15,6 @@
 .element.style {
   margin-left: 0;
 } 
-
 
 .swiper-button-prev::after {
   font-size: 1.5em !important;
